--- a/teoria/01.md
+++ b/teoria/01.md
@@ -80,7 +80,9 @@ $$T_1 \omega_1 = T_2 \omega_2$$
 
 Diseño para velocidad/torque maximos, pero durante operación, como controlo el punto de operación ? Ejemplo: necesito la mitad de la velocidad con el mismo torque.
 
-[Lab 1](../)
+[Lab 1](../lab/L1.md)
+
+Informe 1
 
 ## Bibliografia
 
