--- a/lab/L1.md
+++ b/lab/L1.md
@@ -2,4 +2,14 @@
 # Laboratorio 1
 #### Segundo Semestre de 2024
 
-1. Elija un motor DC
+Elija un motor DC, el cual será .... . Consulte con el profesor sobre el voltaje de operación del motor elegido, el cual llamaremos $V_{nom}$. 
+
+Prepare el motor para que se conecte a la fuente C.C. , por ejemplo soldando cables en sus terminales. Prepare también una marcación que permita medir las rotaciones.
+
+1. Utilizando la fuente C.C. y el tacometro, mida la velocidad del motor con distintos voltajes. Realice al menos 10 mediciones a intervalor constantes entre 0 y $V_{nom}$. (3pt)
+
+1. Calcule la relación entre la velocidad y el voltaje para cada medición. (1pt)
+
+1. Construya una grafica con los resultados. (1pt)
+
+1. Basandose en los resultados conteste: ¿Cuál es la relación entre la velocidad y el voltaje en un motor DC? (1pt)
