Add last eq on 03

--- a/teoria/03.md
+++ b/teoria/03.md
@@ -40,9 +40,9 @@ es decir, podemos aproximar el motor como un sistema de primer orden donde un vo
 
 este modelo es una buena aproximación, pero si se requiere un modelo más preciso es necesario incluir el efecto de la velocidad angular en $v_b$. La función de transferencia completa sería: 
 
-$$\frac{\omega}{v_a} = \frac{}{}$$
+$$\frac{\omega}{v_a} = \frac{k_t}{(L_a s + R_a)(J s + b) + k_v k_t}$$
 
 ## Bibliografia
 
 - de Silva, Clarence W. (2007). Sensors and Actuators: Control System Instrumentation. Estados Unidos, CRC Press.
-  - Capitulo 7, sesiones 7.1 y 7.2.1
+  - Capitulo 7, sesíon 7.3.2
