update missing piece of L1

--- a/lab/L1.md
+++ b/lab/L1.md
@@ -2,7 +2,7 @@
 # Laboratorio 1
 #### Segundo Semestre de 2024
 
-Elija un motor DC, el cual será .... . Consulte con el profesor sobre el voltaje de operación del motor elegido, el cual llamaremos $V_{nom}$. 
+Elija un motor DC, el cual será caracterizado durante los laboratorios de este semestre. Consulte con el profesor sobre el voltaje de operación del motor elegido, el cual llamaremos $V_{nom}$. 
 
 Prepare el motor para que se conecte a la fuente C.C. , por ejemplo soldando cables en sus terminales. Prepare también una marcación que permita medir las rotaciones.
 
