--- a/lab/L2.md
+++ b/lab/L2.md
@@ -24,7 +24,7 @@
 
     $$\frac{\omega}{v_a} = \frac{k_t}{(L_a s + R_a)(J s + b)+k_t k_v}$$
 
-    $$\frac{i_a}{v_a} = \frac{1}{(L_a s + R_a)(J s + b)+k_t k_v}$$
+    $$\frac{i_a}{v_a} = \frac{Js+b}{(L_a s + R_a)(J s + b)+k_t k_v}$$
 
     AYUDA3: Considere además que el valor en estado estacionario se obtiene cuando $s=0$ y que la aproximación de primer órden del motor considera que $(L_a s + R_a) = R_a$
     
