--- a/lab/L2.md
+++ b/lab/L2.md
@@ -12,7 +12,7 @@
 
     Conecte una sonda del osciloscopio al punto A y otra al punto B. Conecte las tierras de las sondas a la tierra del circuito.
 
-    El voltaje medido en la sonda conectada al punto A es numericamente igual a la corriente que fluye en el circuito $i_a$ (una vez que la resistencia es de $1\ \Omega$).
+    El voltaje medido en la sonda conectada al punto A es numericamente igual a 10 veces la corriente que fluye en el circuito $i_a$ (una vez que la resistencia es de $10\ \Omega$).
 
     Encienda el interruptor, capture el momento en que ocurre la transición en el osciloscopio y, basandose en aquello, estime la ganancia en estado estacionario G y constante de tiempo $\tau$ del sistema dinamico $\frac{i_a}{v_a}$. (2pt)
 
