add 2 more step images

--- a/teoria/10.md
+++ b/teoria/10.md
@@ -6,6 +6,9 @@
 
 ![model](../img/step_principle2.jpg)
 
+![model](../img/step_classification.jpg)
+
+![model](../img/step_vr_12_8.jpg)
 
 
 ## Bibliografia
