add 2 more step images

--- a/teoria/10.md
+++ b/teoria/10.md
@@ -1,4 +1,4 @@
-# Motores de paso y brushless
+# Motores de paso-a-paso y brushless
 
 
 
@@ -10,6 +10,37 @@
 
 ![model](../img/step_vr_12_8.jpg)
 
+estator, rotor
+
+unipolar, bipolar
+
+$n_s, n_r, p$
+
+$\theta_s = \frac{360°}{n_s}$
+
+$\theta_r = \frac{360°}{n_r}$
+
+$\Delta\theta = \theta_r - r \theta_s$, si $\theta_r >  \theta_s$
+
+$\Delta\theta = \theta_s - r \theta_r$, si $\theta_s >  \theta_r$
+
+$ r = \max \N | \Delta\theta >0$
+
+para paso completo:
+
+$\theta_r = p \Delta\theta$
+
+$n_s = r n_r + \frac{n_s}{p}$, si $n_s > n_r$
+
+$n_r = r n_s + \frac{n_s}{p}$, si $n_r > n_s$
+
+paso: $n = \frac{360°}{\Delta\theta}$
+
+![model](../img/step_toothed_stator.jpg)
+
+Driver
+
+![model](../img/step_driver.jpg)
 
 ## Bibliografia
 
