add some more step images

--- a/teoria/10.md
+++ b/teoria/10.md
@@ -42,6 +42,20 @@ Driver
 
 ![model](../img/step_driver.jpg)
 
+Jitter
+
+![model](../img/step_single_step.jpg)
+
+![model](../img/step_multiple_step.jpg)
+
+Error de posición
+
+$\theta_e = \frac{p}{n}\sin^{-1} (\frac{T_L}{T_{max}})$
+
+![model](../img/step_T_vs_omega.jpg)
+
+![model](../img/step_control.jpg)
+
 ## Bibliografia
 
 - de Silva, Clarence W. (2007). Sensors and Actuators: Control System Instrumentation. Estados Unidos, CRC Press.
