--- a/teoria/10.md
+++ b/teoria/10.md
@@ -56,6 +56,16 @@ $\theta_e = \frac{p}{n}\sin^{-1} (\frac{T_L}{T_{max}})$
 
 ![model](../img/step_control.jpg)
 
+ejercicio pagina 463
+
+energia: $KE = \frac{1}{2} mv^2 =  \frac{1}{2} J\omega^2$
+
+fuerza: $F = m\frac{dv}{dt}$
+
+torque: $T = J\frac{d\omega}{dt}$
+
+transmisión: $T_1 \omega_1 = T_2 \omega_2$ o $T_1 \omega_1 = F_2 v_2$
+
 ## Bibliografia
 
 - de Silva, Clarence W. (2007). Sensors and Actuators: Control System Instrumentation. Estados Unidos, CRC Press.
