--- a/teoria/10.md
+++ b/teoria/10.md
@@ -66,7 +66,14 @@ torque: $T = J\frac{d\omega}{dt}$
 
 transmisión: $T_1 \omega_1 = T_2 \omega_2$ o $T_1 \omega_1 = F_2 v_2$
 
+## Brushless
+
+![model](../img/brushless_diagram.jpg)
+
+![model](../img/brushless_torque.jpg)
+
 ## Bibliografia
 
 - de Silva, Clarence W. (2007). Sensors and Actuators: Control System Instrumentation. Estados Unidos, CRC Press.
   - Capitulo 6
+  - Capitulo 7, sesión 7.1.4
